Added a question, answers, and correct answers array to my js and chose the theme of Futurama quiz

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12" id="trivia-box">
-                <h1>Trivia Game</h1>
+                <h1>Futurama Trivia Game</h1>
             </div>
         </div>
         <div class="row">
