Added the furturama logo and a start button that starts the game via a function on click, working on displaying the questions and answers once the function is called.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12" id="trivia-box">
-                <h1>Futurama Trivia Game</h1>
+                <img src="assets/images/logo.svg.png" alt="Futurama logo">
+                <h1 style="font-weight:bold">TRIVIA GAME</h1>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12" id="question-box">
+                <button type="button" class="btn btn-success btn-lg" id="start-button">Start</button>
+                <h2 id="question-display"></h2>
+                <h3 id="answers-display"></h3>
+            
 
             </div>
         </div>
@@ -31,6 +36,6 @@
     </div>
     
 
-    <script type="text/javascript" src="assets/javascript/game.js"></script>   
+    <script type="text/javascript" src="assets/javascript/app.js"></script>   
 </body>
 </html>
