--- a/index.html
+++ b/index.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Trivia Game</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-12" id="trivia-box">
-                <img src="assets/images/logo.svg.png" alt="Futurama logo">
-                <h1 style="font-weight:bold">TRIVIA GAME</h1>
-            </div>
+      <div class="row">
+        <div class="col-sm-12" id="trivia-box">
+          <img src="assets/images/logo.svg.png" alt="Futurama logo" />
+          <h1 style="font-weight:bold">TRIVIA GAME</h1>
         </div>
-        <div class="row">
-            <div class="col-sm-12" id="question-box">
-                <button type="button" class="btn btn-success btn-lg" id="start-button">Start</button>
-                <h2 id="question-display"></h2>
-                <h3 id="answers-display"></h3>
-            
-
-            </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12" id="question-box">
+          <button
+            type="button"
+            class="btn btn-success btn-lg"
+            id="start-button"
+          >
+            Start
+          </button>
+          <h2 id="question-display"></h2>
         </div>
-
-
-
-
-
-
+      </div>
+      <div class="row answers-show">
+        <div class="col-sm-6 card">
+          <div class="card-body" id="answer-a"></div>
+        </div>
+        <div class="col-sm-6 card"></div>
+        <div class="card-body" id="answer-b"></div>
+      </div>
+      <div class="row answers-show">
+        <div class="col-sm-6 card">
+          <div class="card-body" id="answer-c"></div>
+        </div>
+        <div class="col-sm-6 card">
+          <div class="card-body" id="answer-d"></div>
+        </div>
+      </div>
     </div>
-    
 
-    <script type="text/javascript" src="assets/javascript/app.js"></script>   
-</body>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
+  </body>
 </html>
