changed around a lot of stuff, got the timers working finally! Changed the answers in the array of objects to letters to more easily display the correct answer and have it correlate to whats on the screen. Added gifs that display when the user gets the answer right or wrong and my final score function now displays the amount of answers the user got right or wrong. Finally, I added a song in a seperate container that can be played while taking the quiz.

--- a/index.html
+++ b/index.html
@@ -29,31 +29,46 @@
             Restart
           </button>
         <h2 id="question-display"></h2>
+        </br>
+        <h3 id="timer-display">Time Left to Answer: 15</h3>
+        <h2 id="correct-image-display"></h2>
+        <h2 id="incorrect-image-display"></h2>
+        <h2 id="correct-answers-score"></h2>
+        <h2 id="incorrect-answers-score"></h2>
       </div>
     </div>
     <div class="row answers-show">
       <div class="col-sm-6 card">
         <button type="button" class="btn btn-light answer-button" id="0">
-          <div class="card-body" id="answer-a"></div>
+          <div class="card-body" id="answer-a">1)
+          </div>
         </button>
       </div>
       <div class="col-sm-6 card">
         <button type="button" class="btn btn-light answer-button" id="1">
-          <div class="card-body" id="answer-b"></div>
+          <div class="card-body" id="answer-b">2)</div>
         </button>
       </div>
     </div></br>
       <div class="row answers-show">
         <div class="col-sm-6 card">
           <button type="button" class="btn btn-light answer-button" id="2">
-            <div class="card-body" id="answer-c"></div>
+            <div class="card-body" id="answer-c">3)</div>
           </button>
         </div>
         <div class="col-sm-6 card">
           <button type="button" class="btn btn-light answer-button" id="3">
-            <div class="card-body" id="answer-d"></div>
+            <div class="card-body" id="answer-d">4)</div>
           </button>
         </div>
+      </div>
+    </div>
+    <div class="container1">
+      <div id="musicControls">
+        <button class="btn btn-warning btn-xs theme-button">
+          <span class="fa fa-music"></span> RIP Seymour</button>
+        <button class="btn btn-dark btn-xs pause-button">
+          <span class="fa fa-pause"></span> Pause Song</button>
       </div>
     </div>
 
